# just-give-me-the-fucking-recipe

./: ..gitignore.un~  .gitignore  Cargo.toml  build.rs  database.db  meal_names.txt  prof.json  schema.sql  temp.txt
migrate/: run.py
old-1/: download.py  links.txt  search.py
recipe-api/: Cargo.toml
recipe-api/src/: endpoints.rs  main.rs
recipe-api/src/endpoints/: extract_terms.rs  get_links.rs  get_rawcipe.rs  get_recipe.rs  parse_ingredients.rs  refine.rs  search.rs  submit_link.rs
recipe-common/: Cargo.toml
recipe-common/src/: lib.rs  link.rs  link_blacklist.rs  rawcipe.rs  recipe.rs
recipe-finder/: Cargo.toml  build.rs
recipe-finder/src/: link.rs  main.rs  statistic.rs
recipe-finder/src/c/: extractor.c
recipe-finder/src/link/: downloader.rs  extractor.rs  follower.rs  parser.rs
scripts/: add_remaining_follows.py  import_fdc_data.py  migrate_from_sql.py  migrate_recipes_from_sql.py
src/: gpt.rs  link.rs  link_blacklist.rs  main.rs  page.rs  recipe.rs  statistic.rs  word.rs
src/c/: extractor  extractor.c
src/link/: downloader.rs  extractor.rs  follower.rs  parser.rs  searcher.rs
src/page/: downloader.rs  extractor.rs  follower.rs  parser.rs
src/word/: classifier.rs  generator.rs  searcher.rs
