[package]
name = "just-give-me-the-fucking-recipe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-rusqlite = "0.6.0"

