[package]
name = "recipe-api"
version = "0.1.0"
edition = "2024"

[dependencies]
recipe-common = { path = "../recipe-common" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.0", features = ["macros"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
log = "0.4.22"
ingredient = "0.3.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

