[package]
name = "recipe-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
recipe-common = { path = "../recipe-common" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.10", features = ["json", "hickory-dns"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "chrono"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
log = "0.4.22"
regex = "1.11.1"
url = "2.5.4"
chrono = "0.4.39"
rand = "0.8.5"
iso8601 = "0.6.1"
dateparser = "0.2.1"
anyhow = "1.0.96"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
cc = "1.2.14"

